# syd-rpm

./: Cargo.toml  REUSE.toml  copr-script.sh  rust-syd.spec  syd.spec  update.sh
selinux/: syd.fc  syd.if  syd.te
